# fastapi-first

./: README.md  docker-compose.yaml  pyproject.toml
api/: main.py
api/cruds/: task.py
api/routers/: task.py
api/schemas/: task.py
tests/: test_main.py
